Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-104865

QQuickPaddedRectangle emits topPaddingChanged incorrectly

XMLWordPrintable

    • a08eb13e7a (qt/qtdeclarative/dev) a08eb13e7a (qt/tqtc-qtdeclarative/dev) b6b07fefe1 (qt/qtdeclarative/6.3) b6b07fefe1 (qt/tqtc-qtdeclarative/6.3) ad892e424d (qt/tqtc-qtdeclarative/6.2) f6c7ee264b (qt/qtdeclarative/6.4) b6b07fefe1 (qt/qtdeclarative/6.3.2)

      In `QQuickPaddedRectangle::setPadding`, it emits the padding changed signal for each edge that doesn't have a specific value set for that edge, except for the top edge.  There is a typo in the evaluation, where it is missing the `!` like the other edges.

        

      void QQuickPaddedRectangle::setPadding(qreal padding)
      {
          if (!qFuzzyCompare(m_padding, padding)) {
              m_padding = padding;
              update();
              emit paddingChanged();
              if (m_hasTopPadding)                           <=== missing `!`
                  emit topPaddingChanged();
              if (!m_hasLeftPadding)
                  emit leftPaddingChanged();
              if (!m_hasRightPadding)
                  emit rightPaddingChanged();
              if (!m_hasBottomPadding)
                  emit bottomPaddingChanged();
          }
      }
      

       

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jbornema Joerg Bornemann
            solim Mark Domschot
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes